public/css/book-preview.css
*{
	margin:0;
	padding:0;
}
body{
	/*background:#ccc url(../images/wood.jpg) repeat top left;*/
	/* font-family: Arial, Helvetica, sans-serif;
	color:#444;
	font-size:12px;
	color: #000; */
}
h1{
	color:#2F1B0C;
	font-size:40px;
	margin:20px 0px 0px 20px;
}
span.reference{
	font-family:Arial;
	display:block;
	font-size:12px;
	text-align:center;
	margin-bottom:10px;
}
span.reference a{
	color:#000;
	text-transform:uppercase;
	text-decoration:none;
	margin:0px 20px;
}
span.reference a:hover{
	color:#ddd;
}
/* Booklet jQuery Plugin Style*/
.booklet{
	-moz-box-shadow:0px 0px 1px #fff;
	-webkit-box-shadow:0px 0px 1px #fff;
	box-shadow:0px 0px 1px #fff;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
}

.booklet *{
	-webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
}

.booklet *:before,
.booklet *:after {
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
}

.booklet .page {
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	flex-wrap: wrap;
}

.booklet .page-content,
.booklet .page-content .img-content,
.booklet .page-content .title-content {
	width: 100%;
	height: 86%;
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	justify-content: center;
}

.booklet .page-content img {
	width: 100%;
}

.booklet .page-header,
.booklet .page-footer,
.booklet .page-hidden-meta {
	width: 95%;
	height: 7%;
	font-size: 9px;
}

.booklet .page-hidden-meta {
	visibility: hidden;
}

.booklet .h-page-number,
.booklet .f-page-number {
	width: 5%;
	height: 7%;
	text-align: center;
	font-size: 7px;
	overflow: hidden;
}

.booklet .page-header {
	border-bottom: 1px solid black;
}

.booklet .page-footer {
	border-top: 1px solid black;
}

.booklet .copyright-text {
	position: absolute;
	bottom: 5%;
	font-size: 60%;
}

.booklet .b-wrap-left  {
	background:#fff url(../img/left_bg_w.jpg) no-repeat top left;
	-webkit-border-top-left-radius: 10px;
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-topleft:10px;
	-moz-border-radius-bottomleft: 10px;
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
}
.booklet .b-wrap-right {
	background:#efefef url(../img/right_bg_w.jpg) no-repeat top left;
	-webkit-border-top-right-radius: 10px;
	-webkit-border-bottom-right-radius: 10px;
	-moz-border-radius-topright: 10px;
	-moz-border-radius-bottomright: 10px;
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
}
.booklet .b-counter {
	bottom:10px;
	position:absolute;
	display:block;
	width:90%;
	height:20px;
	border-top:1px solid #ddd;
	color:#222;
	text-align:center;
	font-size:12px;
	padding:5px 0 0;
	background:transparent;
	-moz-box-shadow:0px -1px 1px #fff;
	-webkit-box-shadow:0px -1px 1px #fff;
	box-shadow:0px -1px 1px #fff;
	opacity:0.8;
}

.book_wrapper{
	margin:0 auto;
	padding-top:10px;
	width:317px;
	height:190px;
	position:relative;
	background:transparent url(../img/bg-phone_w.png) no-repeat 16px 2px;
	/* background:transparent url(../img/bg.png) no-repeat 9px 27px; */
}

#mybook-slider {
	width: 250px;
	margin: 10px 30px;
}

.slider.slider-horizontal {
	width: 100% !important;
}

.book_wrapper h1{
	/* color:#13386a; */
	margin:5px 5px 5px 15px;
	font-size:23px;
	/* background:transparent url(../img/h1.png) no-repeat bottom left; */
	padding-bottom:7px;
	text-decoration: underline;
	text-align: center;
}
.book_wrapper p{
	font-size:16px;
	margin:5px 5px 5px 15px;
}
.book_wrapper a.article,
.book_wrapper a.demo{
	background:transparent url(../img/circle.png) no-repeat 50% 0px;
	display:block;
	width:95px;
	height:41px;
	text-decoration:none;
	outline:none;
	font-size:16px;
	color:#555;
	float:left;
	line-height:41px;
	padding-left:47px;
}
.book_wrapper a.demo{
	margin-left:50px;
}
.book_wrapper a.article:hover,
.book_wrapper a.demo:hover{
	background-position:50% -41px;
	color:#13386a;
}

/* .book_wrapper img{
	margin:10px 0px 5px 35px;
	width:300px;
	padding:4px;
	border:1px solid #ddd;
	-moz-box-shadow:1px 1px 1px #fff;
	-webkit-box-shadow:1px 1px 1px #fff;
	box-shadow:1px 1px 1px #fff;
	width: 100%;
} */

/* .booklet .b-wrap-right img{
	border:1px solid #E6E3C2;
} */
a#next_page_button,
a#prev_page_button{
	display:none;
	position:absolute;
	width:41px;
	height:40px;
	cursor:pointer;
	margin-top:-20px;
	top:50%;
	background:transparent url(../img/buttons.png) no-repeat 0px -40px;
}
a#prev_page_button{
	left:-20px;
}
a#next_page_button{
	right:-20px;
	background-position:-41px -40px;
}
a#next_page_button:hover{
	background-position:-41px 0px;
}
a#prev_page_button:hover{
	background-position:0px 0px;
}
.loading{
	width:160px;
	height:56px;
	position: absolute;
	top:50%;
	margin-top:-28px;
	right:135px;
	line-height:56px;
	color:#fff;
	padding-left:60px;
	font-size:15px;
	background: #000 url(../img/ajax-loader.gif) no-repeat 10px 50%;
	opacity: 0.7;
	z-index:9999;
	-moz-border-radius:20px;
	-webkit-border-radius:20px;
	border-radius:20px;
	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
}

/* Custom switch */
.custom-switch {
  padding-left: 2.25rem;
  padding-bottom: 1rem;
}

.custom-control-label {
  padding-top: 0.5rem;
  padding-left: 2rem;
  padding-bottom: 0.1rem;
}

.custom-switch .custom-control-label::before {
  left: -2.25rem;
  height: 2rem;
  width: 3.5rem;
  pointer-events: all;
  border-radius: 1rem;
}

.custom-switch .custom-control-label::after {
  top: calc(0.25rem + 2px);
  left: calc(-2.25rem + 2px);
  width: calc(2rem - 4px);
  height: calc(2rem - 4px);
  background-color: #adb5bd;
  border-radius: 2rem;
  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
  transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
}

@media (prefers-reduced-motion: reduce) {
  .custom-switch .custom-control-label::after {
    transition: none;
  }
}

.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
  background-color: #fff;
  -webkit-transform: translateX(1.5rem);
  transform: translateX(1.5rem);
}

/* Custom btn-group-toggle */
/* selected btn css */
.btn-group-toggle .btn:not(:disabled):not(.disabled).active, .btn-group-toggle .btn:not(:disabled):not(.disabled):active, .show>.btn.dropdown-toggle {
      color: #fff;
      background-color: #2196F3;
      border-color: #2196F3;
}

/* non selected btn css */
.btn-group-toggle .btn {
  color: #fff;
  background-color: #b7b7b7;
  border-color: #6c757d;
}

.book-options-col {
	padding: 0 25px;
}

.book_options .row{
	padding-top: 3px;
}

.section-title-text,
.section-block {
	margin-bottom: 10px;
}

#book_download {
	width: 100%;
	text-align: center;
	margin-top: 20px;
}

#copyright-option,
#book_download div {
	margin-top: 20px;
}

.filename {
	position: absolute;
	bottom: 0;
}

div.card-header span.oi-ellipses {
	-webkit-transform: rotate(-90deg);
	padding-right: 5px;
}

div.card-header span.oi-ellipses:hover {
	cursor: pointer;
}

div.dz-preview span {
	width: 130px;
}

.sw .toolbar > .btn {
	margin-left: 0 !important;
}

#creator-register-form div {
	margin-top: 0;
}

.dropzone .dz-preview .dz-image {
	display: flex;
	justify-content: center;
}

@media(min-width: 700px) {
	.book_wrapper{
		margin:0 auto;
		padding-top:50px;
		width:690px;
		height:500px;
		position:relative;
		background:transparent url(../img/bg-tablet_w.png) no-repeat 20px 33px;
	}

	#mybook-slider {
		width: 598px;
		margin: 20px 43px;
	}

	a#prev_page_button{
		left:-30px;
	}
	a#next_page_button{
		right:-30px;
	}

	.booklet .page-header,
	.booklet .page-footer,
	.booklet .h-page-number,
	.booklet .f-page-number {
		font-size: 12px;
	}
}

@media (min-width: 1000px) {
	.book_wrapper{
		margin:0 auto;
		padding-top:50px;
		width:905px;
		height:650px;
		position:relative;
		background:transparent url(../img/bg_w.png) no-repeat 9px 27px;
	}

	#mybook-slider {
		width: 800px;
		margin: 30px 52px;
	}

	a#prev_page_button{
		left:-30px;
	}
	a#next_page_button{
		right:-30px;
	}

	.booklet .page-header,
	.booklet .page-footer,
	.booklet .h-page-number,
	.booklet .f-page-number {
		font-size: 12px;
	}

	.image-options {
		padding-left: 225px;
	}

}

